--- a/assects/css/styles.css
+++ b/assects/css/styles.css
@@ -172,6 +172,10 @@ header {
 	animation-duration: 1s;
 	animation-iteration-count: 1;
 }
+#message {
+  	padding-bottom: 100px;
+  	padding-right: 230px;
+  }
 
 .contact h1 {
 	text-align: center;
@@ -244,9 +248,11 @@ footer {
  	position: fixed;
  	bottom: 20px;
  	right: 30px;
-    color: black;
+  color: var(--background);
+  width: 20;
+ 	height: 20;
  }
-
+ 
  @keyframes all {
  	0% {transform: translateY( 30px);}
  	100% {transform: translateY(0px);}
@@ -256,13 +262,68 @@ footer {
  	header{
  		flex-direction: column;
  		width: 100%;
+ 		max-height: 100%;
+ 	}
+ 	header, section, footer {
+ 		animation-name: all;
+	  animation-duration: 1s;
+	  animation-iteration-count: 1;
+
+ 	}
+ 	header, section {
+ 		margin-bottom: 20px;
  	}
  	.textwrapper {
  		order: 2;
  	}
  	.image {
  		order: 1;
- 		border-radius: 10px;
+ 		margin: 10px;
  	}
+  .flexbox {
+	flex-direction: column;
+  }
+  .skills {
+  	flex-direction: column;
+  }
+  .skillimg {
+  	margin:0px 30px 4px 50px;
+  }
+  .skill {
+  	position: relative;
+  	margin: 0px 0px 0px 50px;
+  }
+  .flexbox2 {
+  	flex-direction: column;
+  	display: flex;
+  }
+  .form button {
+  	position: static;
+  	}
+  #message {
+  	padding-bottom: 100px;
+  	padding-right: 0;
+  }
+  .column {
+  	max-width: 400px;
+  	position: relative;
+  	text-align: center;
+  	align-content: center;
+  	justify-content: center;
+  }
+  .info p {
+  	text-align: center;
+  }
+  input {
+  	margin-top: 5px;
+  }
+  .flexbox3 {
+  	flex-direction: column;
+  	gap: 10px;
+  	text-align: center;
+  }
+  footer {
+  	flex-direction: column;
+  }
+}
 
- }
